# rust-time-sync

ntp-sync/: Cargo.toml
ntp-sync/ntp/src/: lib.rs  ntp.rs
ntp-sync/src/: lib.rs  main.rs
ntp-sync/src/settime/: linux.rs  mod.rs  windows.rs
