[package]
name = "ntp-sync"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ntpclient]
path = "./ntp"

[dependencies.time]
version = "*"

[dependencies.rust_parse]
git = "https://github.com/MwlLj/rust_parse"
version = "*"

[dependencies.libc]
version = "0.2"
